bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction3 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[site_label@0 as site_label, wtur_label@1 as wtur_label, year@2 as year, month@3 as month, day@4 as day, hour@5 as hour, minute_10@6 as minute_10, ENC_PT(<uuid>@7) as avg_val]
  AggregateExec: mode=Single, gby=[site_label@0 as site_label, wtur_label@1 as wtur_label, ENC_PT(year@7) as year, ENC_PT(month@6) as month, ENC_PT(day@5) as day, ENC_PT(hour@4) as hour, ENC_PT(minute_10@3) as minute_10], aggr=[<uuid>]
    ProjectionExec: expr=[site_label@1 as site_label, wtur_label@2 as wtur_label, val@3 as val, minute_10@4 as minute_10, hour@5 as hour, day@6 as day, MONTH(__common_expr_1@0) as month, YEAR(__common_expr_1@0) as year]
      ProjectionExec: expr=[ENC_TF(t@4) as __common_expr_1, site_label@1 as site_label, wtur_label@2 as wtur_label, val@3 as val, MUL(4:4:10, FLOOR(DIV(MINUTES(__common_expr_3@0), 4:2:Some(<uuid>),36,18))) as minute_10, HOURS(__common_expr_3@0) as hour, DAY(__common_expr_3@0) as day]
        ProjectionExec: expr=[ENC_TF(t@3) as __common_expr_3, site_label@0 as site_label, wtur_label@1 as wtur_label, val@2 as val, t@3 as t]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@10, dp@0)], projection=[site_label@1, wtur_label@3, val@11, t@13]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@10, dp@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8, ts@9, dp@10, val@12]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@9, ts@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8, ts@9, dp@11]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@9, ts@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8, ts@9]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@8, generator@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8, ts@10]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@8, generator@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@7, generator_asp@1)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@7, generator@8]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@6, gensys@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6, generator_asp@8]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@6, gensys@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@5, gensys_asp@1)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5, gensys@6]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@4, wtur@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@5]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@4, wtur@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4, gensys_asp@6]
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@2, wtur_asp@1)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@3, wtur@4]
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@2, wtur_asp@0)], projection=[site@0, site_label@1, wtur_asp@2, wtur_label@4]
                                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@1, wtur_asp@3]
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable
                                          FilterExec: EBV(EQ(ENC_TF(site_label@1), 2:{value:Wind Mountain,language:}))
                                            FilterExec: DynamicFilter [ empty ]
                                              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                        FilterExec: DynamicFilter [ empty ]
                                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                      FilterExec: DynamicFilter [ empty ]
                                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                    FilterExec: DynamicFilter [ empty ]
                                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                  FilterExec: DynamicFilter [ empty ]
                                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                                FilterExec: DynamicFilter [ empty ]
                                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                              FilterExec: DynamicFilter [ empty ]
                                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                            FilterExec: DynamicFilter [ empty ]
                              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                          FilterExec: DynamicFilter [ empty ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                        FilterExec: DynamicFilter [ empty ]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                      FilterExec: DynamicFilter [ empty ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                    FilterExec: DynamicFilter [ empty ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                  FilterExec: DynamicFilter [ empty ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: EBV(LEQ(ENC_TF(t@1), 5:{date_time_type:0,value:63797492813.000000000000000000,offset:})) AND EBV(GEQ(ENC_TF(t@1), 5:{date_time_type:0,value:63797446013.000000000000000000,offset:}))
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
